--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,6 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+clinica_veterinaria/settings.py
+clinica_veterinaria/__init__.py
